Preserve original url when routing through api/server

--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,12 @@
   },
   "rewrites": [
     {
+      "source": "/",
+      "destination": "/api/server?path=/"
+    },
+    {
       "source": "/(.*)",
-      "destination": "/api/server"
+      "destination": "/api/server?path=/$1"
     }
   ]
 }
