--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/api/server?path=/api/$1"
+    },
+    {
+      "source": "/p/(.*)",
+      "destination": "/api/server?path=/p/$1"
     }
   ]
 }
