--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,22 @@
 {
   "version": 2,
   "functions": {
-    "server.js": {
+    "api/index.js": {
       "runtime": "nodejs18.x"
     }
   },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/.*",
-      "dest": "/server.js"
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
+    },
+    {
+      "source": "/admin(.*)",
+      "destination": "/api/index.js"
+    },
+    {
+      "source": "/p/(.*)",
+      "destination": "/api/index.js"
     }
   ]
 }
