--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
   },
   "rewrites": [
     {
+      "source": "/api",
+      "destination": "/api/index.js"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/index.js"
     },
