--- a/vercel.json
+++ b/vercel.json
@@ -8,19 +8,23 @@
   "rewrites": [
     {
       "source": "/api",
-      "destination": "/api/index.js"
+      "destination": "/api/index"
     },
     {
       "source": "/api/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api/index"
     },
     {
-      "source": "/admin(.*)",
-      "destination": "/api/index.js"
+      "source": "/admin",
+      "destination": "/api/index"
+    },
+    {
+      "source": "/admin/(.*)",
+      "destination": "/api/index"
     },
     {
       "source": "/p/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api/index"
     }
   ]
 }
