--- a/vercel.json
+++ b/vercel.json
@@ -5,18 +5,12 @@
       "runtime": "nodejs18.x"
     }
   },
-  "routes": [
-    {
-      "src": "/api(?:/.*)?",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/admin(?:/.*)?",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/p/(.*)",
-      "dest": "/api/index.js"
-    }
+  "rewrites": [
+    { "source": "/api", "destination": "/api/index.js" },
+    { "source": "/api/(.*)", "destination": "/api/index.js" },
+    { "source": "/admin", "destination": "/api/index.js" },
+    { "source": "/admin/(.*)", "destination": "/api/index.js" },
+    { "source": "/p/(.*)", "destination": "/api/index.js" }
   ]
 }
+
