--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
   "version": 2,
   "functions": {
-    "api/index.js": {
+    "api/[...route].js": {
       "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
-    { "source": "/api", "destination": "/api/index.js" },
-    { "source": "/api/(.*)", "destination": "/api/index.js" },
-    { "source": "/admin", "destination": "/api/index.js" },
-    { "source": "/admin/(.*)", "destination": "/api/index.js" },
-    { "source": "/p/(.*)", "destination": "/api/index.js" }
+    { "source": "/admin", "destination": "/api/[...route].js" },
+    { "source": "/admin.html", "destination": "/api/[...route].js" },
+    { "source": "/admin/(.*)", "destination": "/api/[...route].js" },
+    { "source": "/p/(.*)", "destination": "/api/[...route].js" }
   ]
 }
 
