Route all admin/api paths through serverless function

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
   "version": 2,
-  "functions": {
-    "api/[...route].js": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "rewrites": [
-    { "source": "/admin", "destination": "/api/[...route].js" },
-    { "source": "/admin.html", "destination": "/api/[...route].js" },
-    { "source": "/admin/(.*)", "destination": "/api/[...route].js" },
-    { "source": "/p/(.*)", "destination": "/api/[...route].js" }
+  "routes": [
+    { "src": "/api", "dest": "/api/index.js" },
+    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "/admin", "dest": "/api/index.js" },
+    { "src": "/admin.html", "dest": "/api/index.js" },
+    { "src": "/admin/(.*)", "dest": "/api/index.js" },
+    { "src": "/p/(.*)", "dest": "/api/index.js" }
   ]
 }
 
