--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "movilstudio",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "vercel dev",
+    "dev": "vercel dev",
     "backup-projects": "node scripts/backup-projects.js",
     "push-projects": "node scripts/push-projects-to-cloudinary.js"
   },
@@ -12,13 +12,8 @@
     "node": "18.x"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@ffprobe-installer/ffprobe": "^2.1.2",
+    "busboy": "^1.6.0",
     "cloudinary": "^1.41.0",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.34.4"
+    "dotenv": "^17.2.3"
   }
 }
