--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/api", "dest": "/api/index.js" },
-    { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/admin", "dest": "/api/index.js" },
-    { "src": "/admin.html", "dest": "/api/index.js" },
-    { "src": "/admin/(.*)", "dest": "/api/index.js" },
-    { "src": "/p/(.*)", "dest": "/api/index.js" }
+    { "src": "/p/(.*)", "dest": "/api/p/$1" }
   ]
 }
 
