--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": "22.x"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "busboy": "^1.6.0",
     "cloudinary": "^1.41.0",
     "dotenv": "^17.2.3"
